--- a/sem3/blueprint_query/templates/request_result.html
+++ b/sem3/blueprint_query/templates/request_result.html
@@ -27,6 +27,6 @@ Group_index = {{group_index}}
 <br><br><br>
 <br><br><br>
 <!--<a href='http://127.0.0.1:5001/menu'> Press to return </a>-->
-<a href = '/menu'> Нажмите для возврата в меню </a>
+<a href = '/'> Нажмите для возврата в меню </a>
 
 </body>
