Form replaece with reference

--- a/sem3/templates/start_request.html
+++ b/sem3/templates/start_request.html
@@ -8,12 +8,12 @@
 <body>
   <h4 align = center> Выберите действие</h4>
   <br><br><br>
-  <form method = 'POST', action = ''>
+
     <div align = center>
-     <input type="submit", name='start_request', value = 'Начать работу'>
+     <a href = '?start_request=1'> Начать запросы</a>
       <br><br><br>
-      <input type="submit", name='exit', value = 'Выход' >
+      <a href = '?exit=1'> Завершить запросы</a>
     </div>
-  </form>
+
 </body>
 </html>
