Refactor code for sem4

--- a/sem4/templates/base.html
+++ b/sem4/templates/base.html
@@ -5,7 +5,6 @@
     <title>Flask Project</title>
 </head>
 <body>
-{% block main_menu %}{% endblock %}
-
+{% block menu %}{% endblock %}
 </body>
 </html>
